--- a/CH2__Statistical_Rethinking_2016.Rmd
+++ b/CH2__Statistical_Rethinking_2016.Rmd
@@ -9,7 +9,6 @@ output:
     toc_float: true
 ---
 
-# Chapters {.tabset}
 
 ## Chapter 2
 
@@ -202,21 +201,79 @@ Pr(Earth|Land)
 
 2M4. Suppose you have a deck with only three cards. Each card has two sides, and each side is either black or white. One card has two black sides. The second card has one black and one white side. The third card has two white sides. Now suppose all three cards are placed in a bag and shuffled. Someone reaches into the bag and pulls out a card and places it flat on a table. A black side is shown facing up, but you don’t know the color of the side facing down. Show that the probability that the other side is also black is 2/3. Use the counting method (Section 2 of the chapter) to approach this problem. This means counting up the ways that each card could produce the observed data (a black side facing up on the table).
 
+(A) There are three cards but six ways to pull cards: BB, BB, BW, WB, WW, WW. The reason for the extra cards is that the order does matter, so BW and WB can be drawn from either side. We begin with the first card being B. If that is drawn, then we are only left with three other options. We then standardize with $Pr(B|A) = \frac{Pr(A,B)}{Pr(B)}$ where $Pr(B)$ is the value of all cards that have a black front.
+
+
+| Card | Given B | Back B| Standardize |
+|:-----|--------:|------:|------------:|
+| BB   | 1       | 1     | 1/3         |
+| BB   | 1       | 1     | 1/3         |
+| BW   | 1       | 0     | 0           |
+| WB   | 0       | 0     | 0           | 
+| WW   | 0       | 0     | 0           |
+| WW   | 0       | 0     | 0           |
+
+Thus, $Pr(B_{Rear}|B_{Front}) = \frac{2}{3}$
+
+
+
+2M5. Now suppose there are four cards: B/B, B/W, W/W, and another B/B. Again suppose a card is drawn from the bag and a black side appears face up. Again calculate the probability that the other side is black.
+
+(A) This time we have 8 possible selections: {BB, BB, BB, BB, BW, WB, WW, WW}
+
+| Card | Given B | Back B| Standardize |
+|:-----|--------:|------:|------------:|
+| BB   | 1       | 1     | 1/5         |
+| BB   | 1       | 1     | 1/5         |
+| BB   | 1       | 1     | 1/5         |
+| BB   | 1       | 1     | 1/5         |
+| BW   | 1       | 0     | 0           |
+| WB   | 0       | 0     | 0           | 
+| WW   | 0       | 0     | 0           |
+| WW   | 0       | 0     | 0           |
+
+Thus, $Pr(B_{Rear}|B_{Front}) = \frac{4}{5}$
+
+
+
+2M6. Imagine that black ink is heavy, and so cards with black sides are heavier than cards with white sides. As a result, it’s less likely that a card with black sides is pulled from the bag. So again assume there are three cards: B/B, B/W, and W/W. After experimenting a number of times, you conclude that for every way to pull the B/B card from the bag, there are 2 ways to pull the B/W card and 3 ways to pull the W/W card. Again suppose that a card is pulled and a black side appears face up. Show that the probability the other side is black is now 0.5. Use the counting method, as before.
+
+
+(A) We repeat the experiment this time with weights.
+
+| Card | Given B | Back B| Weight |Standardize  |
+|:-----|--------:|------:|-------:|------------:|
+| BB   | 1       | 1     | 1/12   | 1/3         |
+| BB   | 1       | 1     | 1/12   | 1/3         |
+| BW   | 1       | 0     | 2/12   | 0           |
+| WB   | 0       | 0     | 2/12   | 0           | 
+| WW   | 0       | 0     | 3/12   | 0           |
+| WW   | 0       | 0     | 3/12   | 0           |
+
+Thus, $Pr(B_{Rear}|B_{Front}) = \frac{2}{6} + \frac{2}{12} = \frac{1}{2} = 0.5$
+
+
+2M7. Assume again the original card problem, with a single card showing a black side face up. Before looking at the other side, we draw another card from the bag and lay it face up on the table. The face that is shown on the new card is white. Show that the probability that the first card, the one showing a black side, has black on its other side is now 0.75. Use the counting method, if you can. Hint: Treat this like the sequence of globe tosses, counting all the ways to see each observation, for each possible first card.
 
 
 
 
 
+**Hard**
+
+2H1. Suppose there are two species of panda bear. Both are equally common in the wild and live in the same places. They look exactly alike and eat the same food, and there is yet no genetic assay capable of telling them apart. They differ however in their family sizes. Species A gives birth to twins 10% of the time, otherwise birthing a single infant. Species B births twins 20% of the time, otherwise birthing singleton infants. Assume these numbers are known with certainty, from many years of field research. Now suppose you are managing a captive panda breeding program. You have a new female panda of unknown species, and she has just given birth to twins. What is the probability that her next birth will also be twins?
 
 
+2H2. Recall all the facts from the problem above. Now compute the probability that the panda we have is from species A, assuming we have observed only the first birth and that it was twins. 
 
+2H3. Continuing on from the previous problem, suppose the same panda mother has a second birth and that it is not twins, but a singleton infant. Compute the posterior probability that this panda is species A.
 
+2H4. A common boast of Bayesian statisticians is that Bayesian inference makes it easy to use all of the data, even if the data are of different types. So suppose now that a veterinarian comes along who has a new genetic test that she claims can identify the species of our mother panda. But the test, like all tests, is imperfect. This is the information you have about the test:
 
+* The probability it correctly identifies a species A panda is 0.8.
+* The probability it correctly identifies a species B panda is 0.65.
 
-
-
-
-
+The vet administers the test to your panda and tells you that the test is positive for species A. First ignore your previous information from the births and compute the posterior probability that your panda is species A. Then redo your calculation, now using the birth data as well.
 
 
 
